--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background: url("https://cdn.pixabay.com/photo/2015/05/11/17/47/music-762842_960_720.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
